--- a/uduxpass-scanner-app/client/index.html
+++ b/uduxpass-scanner-app/client/index.html
@@ -8,16 +8,16 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>uduXPass Scanner</title>
     <meta name="description" content="Professional ticket scanning app for uduXPass events" />
-    <meta name="theme-color" content="#1E40AF" />
+    <meta name="theme-color" content="#0f1729" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
   </head>
 
   <body>
