--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>uduXPass - Premium Event Ticketing Platform</title>
+    <title>uduXPass — Premium Event Ticketing</title>
     <meta name="description" content="Discover and book tickets for the hottest events in Nigeria. Secure payments with MoMo and Paystack integration." />
+    <meta name="theme-color" content="#0f1729" />
+    <!-- Premium typography: Syne (display) + Inter (body) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
